--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "motion": "^12.0.5",
     "next": "15.1.6",
     "nextjs-toploader": "^3.7.15",
+    "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
