--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@number-flow/react": "^0.5.5",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@splinetool/react-spline": "^4.0.0",
@@ -22,7 +24,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.0.11",
     "lenis": "^1.1.20",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
