--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@number-flow/react": "^0.5.5",
     "@prisma/client": "^6.3.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -19,18 +20,19 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.2",
-    "@rainbow-me/rainbowkit": "^2.2.3",
-    "@tanstack/react-query": "^5.66.0",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@rainbow-me/rainbowkit": "^2.2.3",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.59",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cuid": "^3.0.0",
     "framer-motion": "^12.0.11",
     "lenis": "^1.1.20",
     "lottie-react": "^2.4.1",
@@ -50,7 +52,8 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.14.9",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
