--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.3",
     "recharts": "^2.15.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.4",
