--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
+    "eventsource-parser": "^3.0.0",
     "framer-motion": "^12.0.11",
     "install": "^0.13.0",
     "lenis": "^1.1.20",
