--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@mantine/core": "^7.17.0",
+    "@mantine/hooks": "^7.17.0",
+    "@mantine/modals": "^7.17.0",
     "@number-flow/react": "^0.5.5",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -20,6 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -32,7 +37,8 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.59",
     "@tabler/icons-react": "^3.30.0",
-    "@tanstack/react-query": "^5.66.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.66.6",
     "@tanstack/react-table": "^8.20.6",
     "@types/canvas-confetti": "^1.9.0",
     "@upstash/redis": "^1.34.4",
@@ -42,6 +48,7 @@
     "cuid": "^3.0.0",
     "eventsource-parser": "^3.0.0",
     "framer-motion": "^12.0.11",
+    "heroui-cli": "^1.0.0",
     "install": "^0.13.0",
     "lenis": "^1.1.20",
     "lottie-react": "^2.4.1",
@@ -50,6 +57,7 @@
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
+    "novita-sdk": "^3.1.0",
     "pdfjs-dist": "3.4.120",
     "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
@@ -60,9 +68,10 @@
     "sharp": "^0.33.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.x",
-    "wagmi": "^2.14.9",
+    "viem": "^2.23.2",
+    "wagmi": "^2.14.11",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
