--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@react-pdf-viewer/core": "3.12.0",
@@ -40,6 +42,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.66.6",
     "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-virtual": "^3.13.0",
     "@types/canvas-confetti": "^1.9.0",
     "@upstash/redis": "^1.34.4",
     "canvas-confetti": "^1.9.3",
@@ -47,7 +50,7 @@
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
     "eventsource-parser": "^3.0.0",
-    "framer-motion": "^12.0.11",
+    "framer-motion": "^12.4.4",
     "heroui-cli": "^1.0.0",
     "install": "^0.13.0",
     "lenis": "^1.1.20",
@@ -64,6 +67,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
+    "react-virtuoso": "^4.12.5",
     "recharts": "^2.15.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.4",
